fix(bg-img): Update bg-image position and size to adjust on smaller/larger screens. Now based on per cent on smaller screens and fixed on larger screens.

--- a/src/app/styles/styles.css
+++ b/src/app/styles/styles.css
@@ -29,13 +29,19 @@
 body {
   background-image: url("https://res.cloudinary.com/divlee1zx/image/upload/v1766956445/basic-rgb_txrpzm.png");
   background-repeat: no-repeat;
-  background-position: left 98%;
-  background-size: 25%;
+  background-position: left 90%;
+  background-size: 30%;
   background-attachment: fixed;
   background-color: var(--background);
   color: var(--textColour);
   font-family: Arial, Helvetica, sans-serif;
   min-width: 320px;
+}
+
+@media (min-width: 700px) {
+  body {
+    background-size: contain;
+  }
 }
 
 .container {
